# ikean

./: .gitignore  .pre-commit-config.yaml  en.html  generate.py  index.html  pyproject.toml  readme.md  ricardo.py
content/: translations.json
content/about/: about.json  de.md  en.md  jp.md
content/aspects/: schema.json
css/: animations.css  reset.css  styles.css
docs/: backlog.md  index.html
docs/css/: checkerboard.css
docs/en/: aspects.html
docs/jp/: toys.html
generate/: __main__.py  checkerboard.py  convert.sh  generate.py  generator.py  i18n.py  playground.py  webp_to_jpg.sh
generate/templates/: about.html  aspects.html  base.html  checkerboard.html  contact.html  events.html  home.html  order.html  pages.json  principles.html  toys.html  utensils.html
generate_tests/: test_generate.py
site/: scripts.js  search.js
site/css/: animations.css  checkerboard.css  header.css  jp.css  order.css  print.css  reset.css  styles-768.css  styles.css  toys.css
site/de/: about.html  aspects.html  contact.html  events.html  home.html  order.html  principles.html  toys.html  utensils.html
site/en/: about.html  aspects.html  contact.html  events.html  home.html  order.html  principles.html  toys.html  toys_draft.html  utensils.html
site/jp/: about.html  aspects.html  contact.html  events.html  home.html  order.html  principles.html  toys.html  utensils.html
site/templates/: base.html  order.html  toys.html  translations.json
site_content/: translations.json
src/: resize.js
src/css/: reset.css  (+2 more)
tests/: test_playground.py
toys/: categories.json
(+461 files in other folders)
