[tool.poetry]
name = "ikean"
version = "0.1.0"
description = ""
authors = ["Nico Colic <n<nico@hedonisms.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.7.0"
jinja2 = "^3.1.3"
pytest = "^8.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
markdown = "^3.6"
openai = "^1.28.1"
spacy = "^3.8.3"
fuckit = "^4.8.1"
weasyprint = "^63.1"
pdfkit = "^1.0.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pillow = "^11.2.1"
beautifulsoup4 = "^4.13.4"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
